# autotax2

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  THREADING_OPTIMIZATION.md  environment.yml  pyproject.toml  threading_optimization.patch
autotax2/: __init__.py  assign.py  audit.py  backbone.py  barrnap.py  cli.py  config.py  consensus.py  core.py  dataset_prepare.py  dependencies.py  export.py  export_validation.py  fasta.py  io.py  logging.py  logging_config.py  placeholders.py  placement.py  prepare.py  ranks.py  registry.py  reports.py  representatives.py  silva.py  sina.py  summarize.py  taxonomy.py  threads.py  thresholds.py  utils.py  validate.py  vsearch.py
autotax2/export/: __init__.py  dada2.py  formats.py  qiime2.py  sintax.py
docs/: FORMAT.md  REPOSITORY_TREE.md  autotax2_debug_workflow.md  autotax_upstream_notes.md  demo_workflow.md  real_run_checklist.md  usage_examples.md
examples/: autotax2.example.yaml  gtdb_ssu.taxonomy.tsv  gtdb_ssu_tax.fa  new_sequences.fa
examples/data/: input.fa  new.fa  old_centroids_97.fa  source_map.tsv
examples/ref/: silva_tiny.fasta  silva_tiny.full_metadata
script/: build_sina_metadadata_fasta.py  build_sina_metadata_fasta_parallel.py
scripts/: build_sina_metadata_fasta.py  detect_intron.py  detect_intron_by_blastn.py  detect_intron_by_blastn_technical_doc.md  run_real_integration_test.sh
src/: assign.py  backbone.py  cli.py  config.py  dependencies.py  external.py  intron.py  intron_analysis.py  intron_coordinates.py  intron_reference.py  logging.py  orientation.py  overlap.py  prepare.py  provenance.py  threads.py  utils.py  vsearch.py
tests/: test_assign.py  test_audit.py  test_cli.py  test_e2e_mocked_pipeline.py  test_export_formats.py  test_intron.py  test_io.py  test_placeholders.py  test_placement.py  test_prepare.py  test_prepare_dataset.py  test_provenance.py  test_ranks.py  test_registry.py  test_reports_validate.py  test_silva_init.py  test_silva_resolve.py  test_sina.py  test_sina_command.py  test_taxonomy.py  test_threading.py  test_threads.py  test_vsearch.py  test_vsearch_uc.py
tests/fixtures/: fake_barrnap.gff3  fake_genus_0.901.uc  fake_sina_output.fa  fake_vs_registry.tsv  gtdb_ar53_taxonomy_r232.tsv  gtdb_bac120_taxonomy_r232.tsv  tiny_dataset_d20.fa  tiny_silva.fa  type_strains.tsv
tests/integration/: README.md  test_real_tools_optional.py
