[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotax2"
version = "0.1"
description = "A VSEARCH-based workflow for SILVA-backed rRNA taxonomy and clustering."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "rich>=13",
  "typer>=0.12",
]
license = {text = "MIT"}
authors = [
  {name = "AutoTax2 contributors"}
]
keywords = ["vsearch", "silva", "taxonomy", "16S", "18S", "rRNA", "SINTAX", "OTU", "ASV"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.scripts]
autotax2 = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
