[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotax2"
version = "0.1.0"
description = "GTDB-anchored incremental SSU taxonomy construction with SINA and vsearch"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Yanpeng Chen", email = "764022822@qq.com"}
]
keywords = ["16S", "SSU", "taxonomy", "GTDB", "SINA", "vsearch", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "biopython>=1.81"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "build>=1.0",
  "twine>=5.0"
]

[project.scripts]
autotax2 = "autotax2.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autotax2*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
